{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 44,
  "lineage": "c88e80ca-8cfb-3f70-5fc0-3d43d48e241d",
  "resources": [
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-046b36f55e189564a",
            "arn": "arn:aws:ec2:us-east-1:000000000000:instance/i-72dda82f1d6767ab3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-72dda82f1d6767ab3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-7cc926b3f9022e21d"
              }
            ],
            "primary_network_interface_id": "eni-7cc926b3f9022e21d",
            "private_dns": "ip-10-20-1-4.ec2.internal",
            "private_ip": "10.20.1.4",
            "public_dns": "ec2-54-214-197-176.compute-1.amazonaws.com",
            "public_ip": "54.214.197.176",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:000000000000:key/6886adb6-43b2-45f7-a0b1-c8ee6d890dd3",
                "throughput": 0,
                "volume_id": "vol-0b02a31d5c56aef5e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-626f7494c779a0f3f",
            "tags": {
              "Name": "ec2-prod"
            },
            "tags_all": {
              "Name": "ec2-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cbd0d25afba0aa68"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "i-72dda82f1d6767ab3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infrastructure_ec2.aws_security_group.ec2_sg",
            "module.infrastructure_ec2.aws_subnet.public_subnet",
            "module.infrastructure_ec2.aws_vpc.custom_vpc",
            "module.infrastructure_ec2.data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-945fd29ff8acaafaf",
            "id": "igw-945fd29ff8acaafaf",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-prod"
            },
            "tags_all": {
              "Name": "igw-prod"
            },
            "vpc_id": "vpc-a2e8b056ac2700948"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "igw-945fd29ff8acaafaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infrastructure_ec2.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-0fd3b6bba02482f39",
            "id": "rtb-0fd3b6bba02482f39",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-945fd29ff8acaafaf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prod"
            },
            "tags_all": {
              "Name": "rt-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-a2e8b056ac2700948"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-0fd3b6bba02482f39",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infrastructure_ec2.aws_internet_gateway.igw",
            "module.infrastructure_ec2.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-979ab8c4bf1c4a030",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd3b6bba02482f39",
            "subnet_id": "subnet-626f7494c779a0f3f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtbassoc-979ab8c4bf1c4a030",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infrastructure_ec2.aws_internet_gateway.igw",
            "module.infrastructure_ec2.aws_route_table.public_rt",
            "module.infrastructure_ec2.aws_subnet.public_subnet",
            "module.infrastructure_ec2.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-0cbd0d25afba0aa68",
            "description": "Security group pour l'environnement prod",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbd0d25afba0aa68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-prod"
            },
            "tags_all": {
              "Name": "sg-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-a2e8b056ac2700948"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-0cbd0d25afba0aa68",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infrastructure_ec2.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-626f7494c779a0f3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-626f7494c779a0f3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-prod"
            },
            "tags_all": {
              "Name": "subnet-public-prod"
            },
            "vpc_id": "vpc-a2e8b056ac2700948"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-626f7494c779a0f3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infrastructure_ec2.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-a2e8b056ac2700948",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-b14ff97c4a3214b60",
            "default_route_table_id": "rtb-736ed0f4462ea9546",
            "default_security_group_id": "sg-c2d27be416f07dbb0",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-a2e8b056ac2700948",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-736ed0f4462ea9546",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-prod"
            },
            "tags_all": {
              "Name": "vpc-prod"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "vpc-a2e8b056ac2700948",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}